WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185959
[iOS] Hard link AppSupport instead of soft linking
https://bugs.webkit.org/show_bug.cgi?id=185959
Summary
[iOS] Hard link AppSupport instead of soft linking
Joseph Pecoraro
Reported
2018-05-24 13:35:51 PDT
Hard link AppSupport instead of soft linking. AppSupport.framework should be linked most of the time anyways, so attempting a dlopen() on it appears to be wasteful.
Attachments
[PATCH] Proposed Fix
(5.22 KB, patch)
2018-05-24 13:36 PDT
,
Joseph Pecoraro
ggaren
: review-
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(7.25 KB, patch)
2018-05-24 14:41 PDT
,
Joseph Pecoraro
thorton
: review+
Details
Formatted Diff
Diff
[PATCH] For Bots
(7.25 KB, patch)
2018-05-24 15:19 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2018-05-24 13:36:08 PDT
<
rdar://problem/40506538
>
Radar WebKit Bug Importer
Comment 2
2018-05-24 13:36:29 PDT
<
rdar://problem/40532660
>
Joseph Pecoraro
Comment 3
2018-05-24 13:36:53 PDT
Created
attachment 341223
[details]
[PATCH] Proposed Fix
Geoffrey Garen
Comment 4
2018-05-24 14:08:05 PDT
Undefined symbols for architecture x86_64: "_OBJC_CLASS_$_CPNetworkObserver", referenced from: objc-class-ref in UnifiedSource55-mm.o
Geoffrey Garen
Comment 5
2018-05-24 14:08:18 PDT
Comment on
attachment 341223
[details]
[PATCH] Proposed Fix This looks like the right thing to do, but we need a build fix.
Joseph Pecoraro
Comment 6
2018-05-24 14:11:56 PDT
So the Public Simulator SDK doesn't have the framework or something? Not sure I'm going to have a workaround for that.
Geoffrey Garen
Comment 7
2018-05-24 14:15:15 PDT
I think there might be a way to fix this by declaring linker stubs? Dan Bates and Alexey might know.
Tim Horton
Comment 8
2018-05-24 14:23:45 PDT
See WebKitLibraries/WebKitPrivateFrameworkStubs
Joseph Pecoraro
Comment 9
2018-05-24 14:41:38 PDT
Created
attachment 341226
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 10
2018-05-24 15:18:11 PDT
Hmm, still no good:
> Undefined symbols for architecture x86_64: > "_OBJC_CLASS_$_CPNetworkObserver", referenced from: > objc-class-ref in UnifiedSource55-mm.o > ld: symbol(s) not found for architecture x86_64
I guess I need to underscore prefix the class name.
Joseph Pecoraro
Comment 11
2018-05-24 15:19:34 PDT
Created
attachment 341228
[details]
[PATCH] For Bots
WebKit Commit Bot
Comment 12
2018-05-24 16:39:14 PDT
Comment on
attachment 341228
[details]
[PATCH] For Bots Clearing flags on attachment: 341228 Committed
r232167
: <
https://trac.webkit.org/changeset/232167
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug