[iOS] Hard link AppSupport instead of soft linking https://bugs.webkit.org/show_bug.cgi?id=185959 <rdar://problem/40506538>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-05-24
Reviewed by Timothy Horton.

Source/WebCore:

* Configurations/WebCore.xcconfig:
* platform/network/ios/NetworkStateNotifierIOS.mm:
(-[WebNetworkStateObserver initWithBlock:]):
(WebCore::NetworkStateNotifier::updateStateWithoutNotifying):

WebKitLibraries:

* WebKitPrivateFrameworkStubs/iOS/10/AppSupport.framework/AppSupport.tbd:
* WebKitPrivateFrameworkStubs/iOS/11/AppSupport.framework/AppSupport.tbd:
Add stub for ObjC Class CPNetworkObserver.

Canonical link: https://commits.webkit.org/201399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232167 268f45cc-cd09-0410-ab3c-d52691b4dbfc